<resources>
    <string name="app_name">Grupo Estrategia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Beneficios</string>
    <string name="menu_slideshow">Boletos</string>
    <string name="descuentos">Descuentos</string>
    <string name="documentos">Documentos</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">signup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign up</string>
    <string name="celular">Celular</string>
    <string name="ingrese_su_n_mero_de_celular">Ingrese su número de celular</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="crea_tu_contrase_a">Crea tu contraseña</string>
    <string name="crea_una_contrase_a_nueva">Crea una contraseña nueva</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="terminar_registro">Terminar registro</string>
</resources>