<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".makePassword">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:textFontWeight="256"
        android:textSize="26sp"
        android:textAlignment="center"
        android:text="@string/crea_tu_contrase_a"
        />
<EditText
    android:id="@+id/pass1"
    android:inputType="textPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/crea_una_contrase_a_nueva"
    android:layout_marginTop="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"/>
    <EditText
        android:id="@+id/pass2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repite_la_contrase_a"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"/>
    <Button
        android:onClick="subirDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/terminar_registro" />
</LinearLayout>