<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.razielalcaraz.grupoestrategia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_beneficios"
        android:name="com.razielalcaraz.grupoestrategia.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_boletos"
        android:name="com.razielalcaraz.grupoestrategia.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_descuentos"
        android:name="com.razielalcaraz.grupoestrategia.ui.home.HomeFragment"
        android:label="Descuentos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_documentos"
        android:name="com.razielalcaraz.grupoestrategia.ui.gallery.GalleryFragment"
        android:label="Documentos"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.razielalcaraz.grupoestrategia.ui.slideshow.SlideshowFragment"
        android:label="Salir"
        tools:layout="@layout/fragment_slideshow" />
</navigation>